package com.example.androidapp

object TestTags {
    const val ALL_NOTES_VIEW = "all notes view"
    const val CALENDAR_VIEW = "calendar view"
    const val DAYS_SCREEN_VIEW = "days screen view"
    const val SETTINGS_SCREEN_VIEW = "settings screen view"
    const val NOTE_EDITOR_VIEW = "note editor view"
    const val NOTE_TITLE_FIELD = "note title field"
    const val NOTE_CONTENT_FIELD = "note content field"
    const val INLINE_TEXT_EDITOR_FIELD = "inline text editor field"
    const val DISPLAYED_NOTE_TITLE = "displayed note title"
    const val DISPLAYED_NOTE_CONTENT = "displayed note content"
    const val DAY_IN_CALENDAR = "day in calendar"
    const val SETTINGS_SCREEN_NAVIGATE_BUTTON = "settings navigate"
    const val BACK_FROM_CHAT_NOTES = "back from chat notes"
    const val SAVE_MESSAGE_BUTTON = "save message button"
}
