<resources>
    <string name="app_name">Uniqrn Notes</string>
    <string name="button">Create Note</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_main">Uniqrn Notes</string>
    <string name="all_notes">All notes</string>
    <string name="calendar">Calendar</string>
    <string name="settings">Settings</string>
    <string name="language">Language</string>
    <string name="notification">Notification</string>
    <string name="font">Font</string>
    <string name="font_size">Font size</string>
    <string name="dark_mode">Dark mode</string>
    <string name="sort_option">Sort option</string>
    <string name="backup">Backup</string>
    <string name="sign_out">Sign out</string>
    <string name="delete_account">Delete account</string>
    <string name="unicorn">Unicorn mode</string>
    <string name="note">Note</string>
    <string name="event_list">Events List</string>
    <string name="event_category_general">General</string>
    <string name="event_category_party">Party</string>
    <string name="event_category_meeting">Meeting</string>
    <string name="event_category_sport">Sport</string>
    <string name="event_category_food">Food</string>
    <string name="event_category_entertainment">Entertainment</string>
    <string name="no_note">No available notes - click to add</string>
    <string name="empty_title">&lt; No title was specified &gt;</string>
    <string name="days">Days</string>
    <string name="chat_notes">Chat notes</string>
    <string name="day_title">Day title</string>
    <string name="apply_language">Apply language</string>
    <string name="change_mode">Change mode</string>
    <string name="pop_up_window">Do you want to save the changes in the note?</string>
    <string name="pop_up_delete_window">Do you want to delete this note?</string>
    <string name="success">Success</string>
    <string name="failure">Failure</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="confirmation">Confirm</string>
    <string name="continue_confirmation">Are you sure you want to continue?</string>
    <string name="backup_or_import">Would you like to import or export the data?</string>
    <string name="import_string">Import</string>
    <string name="choose_action">Choose action</string>
    <string name="data">Data</string>
    <string name="notification_title">Planned for today</string>
    <string name="title">Title</string>
    <string name="events">Events</string>
    <string name="todos">To do</string>
    <string name="ascending">Ascending</string>
    <string name="descending">Descending</string>
    <string name="small">Small</string>
    <string name="standard">Standard</string>
    <string name="big">Big</string>
    <string name="sound">Sound</string>
    <string name="PFUDON">Pink fluffy unicorn</string>
    <string name="CCDD">Chipi chipi</string>
    <string name="BS">Baby Shark</string>
    <string name="NONE">NONE</string>
    <string name="delete_confirmation">Delete confirmation</string>
    <string name="are_you_sure_you_want_to_delete">Are you sure you want to delete this item?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="edit_text">Edit text</string>
</resources>