...
                            modifier = Modifier
                                .size(56.dp)
                                .shakeClickEffect()
                        ) {
                            Icon(
                                imageVector = Icons.Default.Edit,
                                contentDescription = "Create note",
                                tint = MaterialTheme.colorScheme.onPrimary,
                                modifier = Modifier
                                    .size(16.dp)
                            )
                        }
                    }
...
                                },
                                modifier = Modifier
                                    .size(20.dp)
                            ) {
                                Icon(
                                    imageVector = Icons.Default.CalendarMonth,
                                    contentDescription = "Redirect to days",
                                    tint = MaterialTheme.colorScheme.onBackground,
                                )
                            }
                        }
                    }
                }
...
