...
        }else {
                    IconButton(onClick = {
                        isEditing = true
                    }) {
                        Icon(
                            imageVector = Icons.Default.Add,
                            contentDescription = "Add new event"
                        )
                    }
                }
        }
    }
